# RAG

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml
app/: answers.py  documents.py  embeddings.py  main.py  vector_store.py
benchmark_results/: hotpotqa_retrieval.json
benchmarks/: __init__.py  hotpotqa_chunks.py  hotpotqa_dataset.py  hotpotqa_failures.py  hotpotqa_metrics.py  hotpotqa_retrieval.py
tests/: test_answers.py  test_documents.py  test_embeddings.py  test_health.py  test_hotpotqa_chunks.py  test_hotpotqa_dataset.py  test_hotpotqa_failures.py  test_hotpotqa_metrics.py  test_hotpotqa_retrieval.py
