[project]
name = "rag"
version = "0.1.0"
description = "RAG application for document question answering."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
