[project]
name = "rag"
version = "0.1.0"
description = "RAG application for document question answering."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=2.43.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18",
    "uvicorn[standard]>=0.30.0",
]

[tool.uv]
package = false

[dependency-groups]
benchmark = [
    "datasets>=5.0.0",
]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
